2007-10-03  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Bump version to 0.2.1.  Bump Minefield support to
	3.0a9pre/3.0a9.

	* compzilla/src/compzillaIRenderingContextInternal.h: Split out
	compzillaIRenderingContextInternal decl to here.

	* compzilla/src/compzillaRenderingContext.h/cpp: Conform to new
	Minefield canvas backend API.

	* compzilla/src/compzillaRenderingContextFx2.h/cpp: Split out ff2
	canvas rendering context to here, since the interface for
	Minefield has diverged.

	* compzilla/public/compzillaIControl.idl: Fix bug in
	compzillaIControl uuid which causes conflcts when users have
	mugshot installed.
	* compzilla/public/compzillaIRenderingContext.idl: Ditto.

2007-08-19  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Bump version to 0.2.

	* README: Tell people to generate an xpi and install it.

	* NEWS: Update for 0.2.

2007-08-19  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/install.rdf.in: Add this, copied from install.rdf with
	a bunch of keys set from configure variables.

	* configure.in: Define min/maxversion to be used in generated
	install.rdf.

2007-08-11  Alex Graveley  <alex@beatniksoftware.com>

	Fix minefield build:
	* compzilla/src/compzillaRenderingContext.cpp: Include nsMemory.h.
	* compzilla/src/compzillaRenderingContext.h: Include nsIFrame.h.

2007-08-10  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/skin/compzilla.css: Handle ARGB windows
	correctly by setting the background-color transparent for
	.windowContent children of .uiDlgContentCenter.  This makes
	cairo-clock look good.

	* compzilla/chrome/skin/flickrdemo.css: Remove backgroung
	transparency on #flickrWindow.

	* compzilla/src/compzillaControl.cpp (Filter): Don't be picky
	about ungrab notification: always reenable the overlay input.
	This should hopefully fix the occasional loss of input, where
	ungrab notification isn't sent to the root window.

2007-08-09  Alex Graveley  <alex@beatniksoftware.com>
