@@ -7,7 +7,7 @@ var Atoms = {
 
     Intern: function (atom_name) {
 	var cache = null;
-	this.__defineGetter__ (atom_name, 
+	this.__defineGetter__ (atom_name,
 			       function () {
 				   if (cache == null) {
 				       cache = this.svc.InternAtom (atom_name);
@@ -17,74 +17,74 @@ var Atoms = {
     },
 
     /* constant atoms */
-    get XA_PRIMARY () { return 1; },
-    get XA_SECONDARY () { return 2; },
-    get XA_ARC () { return 3; },
-    get XA_ATOM () { return 4; },
-    get XA_BITMAP () { return 5; },
-    get XA_CARDINAL () { return 6; },
-    get XA_COLORMAP () { return 7; },
-    get XA_CURSOR () { return 8; },
-    get XA_CUT_BUFFER0 () { return 9; },
-    get XA_CUT_BUFFER1 () { return 10; },
-    get XA_CUT_BUFFER2 () { return 11; },
-    get XA_CUT_BUFFER3 () { return 12; },
-    get XA_CUT_BUFFER4 () { return 13; },
-    get XA_CUT_BUFFER5 () { return 14; },
-    get XA_CUT_BUFFER6 () { return 15; },
-    get XA_CUT_BUFFER7 () { return 16; },
-    get XA_DRAWABLE () { return 17; },
-    get XA_FONT () { return 18; },
-    get XA_INTEGER () { return 19; },
-    get XA_PIXMAP () { return 20; },
-    get XA_POINT () { return 21; },
-    get XA_RECTANGLE () { return 22; },
-    get XA_RESOURCE_MANAGER () { return 23; },
-    get XA_RGB_COLOR_MAP () { return 24; },
-    get XA_RGB_BEST_MAP () { return 25; },
-    get XA_RGB_BLUE_MAP () { return 26; },
-    get XA_RGB_DEFAULT_MAP () { return 27; },
-    get XA_RGB_GRAY_MAP () { return 28; },
-    get XA_RGB_GREEN_MAP () { return 29; },
-    get XA_RGB_RED_MAP () { return 30; },
-    get XA_STRING () { return 31; },
-    get XA_VISUALID () { return 32; },
-    get XA_WINDOW () { return 33; },
-    get XA_WM_COMMAND () { return 34; },
-    get XA_WM_HINTS () { return 35; },
-    get XA_WM_CLIENT_MACHINE () { return 36; },
-    get XA_WM_ICON_NAME () { return 37; },
-    get XA_WM_ICON_SIZE () { return 38; },
-    get XA_WM_NAME () { return 39; },
-    get XA_WM_NORMAL_HINTS () { return 40; },
-    get XA_WM_SIZE_HINTS () { return 41; },
-    get XA_WM_ZOOM_HINTS () { return 42; },
-    get XA_MIN_SPACE () { return 43; },
-    get XA_NORM_SPACE () { return 44; },
-    get XA_MAX_SPACE () { return 45; },
-    get XA_END_SPACE () { return 46; },
-    get XA_SUPERSCRIPT_X () { return 47; },
-    get XA_SUPERSCRIPT_Y () { return 48; },
-    get XA_SUBSCRIPT_X () { return 49; },
-    get XA_SUBSCRIPT_Y () { return 50; },
-    get XA_UNDERLINE_POSITION () { return 51; },
+    get XA_PRIMARY ()             { return 1; },
+    get XA_SECONDARY ()           { return 2; },
+    get XA_ARC ()                 { return 3; },
+    get XA_ATOM ()                { return 4; },
+    get XA_BITMAP ()              { return 5; },
+    get XA_CARDINAL ()            { return 6; },
+    get XA_COLORMAP ()            { return 7; },
+    get XA_CURSOR ()              { return 8; },
+    get XA_CUT_BUFFER0 ()         { return 9; },
+    get XA_CUT_BUFFER1 ()         { return 10; },
+    get XA_CUT_BUFFER2 ()         { return 11; },
+    get XA_CUT_BUFFER3 ()         { return 12; },
+    get XA_CUT_BUFFER4 ()         { return 13; },
+    get XA_CUT_BUFFER5 ()         { return 14; },
+    get XA_CUT_BUFFER6 ()         { return 15; },
+    get XA_CUT_BUFFER7 ()         { return 16; },
+    get XA_DRAWABLE ()            { return 17; },
+    get XA_FONT ()                { return 18; },
+    get XA_INTEGER ()             { return 19; },
+    get XA_PIXMAP ()              { return 20; },
+    get XA_POINT ()               { return 21; },
+    get XA_RECTANGLE ()           { return 22; },
+    get XA_RESOURCE_MANAGER ()    { return 23; },
+    get XA_RGB_COLOR_MAP ()       { return 24; },
+    get XA_RGB_BEST_MAP ()        { return 25; },
+    get XA_RGB_BLUE_MAP ()        { return 26; },
+    get XA_RGB_DEFAULT_MAP ()     { return 27; },
+    get XA_RGB_GRAY_MAP ()        { return 28; },
+    get XA_RGB_GREEN_MAP ()       { return 29; },
+    get XA_RGB_RED_MAP ()         { return 30; },
+    get XA_STRING ()              { return 31; },
+    get XA_VISUALID ()            { return 32; },
+    get XA_WINDOW ()              { return 33; },
+    get XA_WM_COMMAND ()          { return 34; },
+    get XA_WM_HINTS ()            { return 35; },
+    get XA_WM_CLIENT_MACHINE ()   { return 36; },
+    get XA_WM_ICON_NAME ()        { return 37; },
+    get XA_WM_ICON_SIZE ()        { return 38; },
+    get XA_WM_NAME ()             { return 39; },
+    get XA_WM_NORMAL_HINTS ()     { return 40; },
+    get XA_WM_SIZE_HINTS ()       { return 41; },
+    get XA_WM_ZOOM_HINTS ()       { return 42; },
+    get XA_MIN_SPACE ()           { return 43; },
+    get XA_NORM_SPACE ()          { return 44; },
+    get XA_MAX_SPACE ()           { return 45; },
+    get XA_END_SPACE ()           { return 46; },
+    get XA_SUPERSCRIPT_X ()       { return 47; },
+    get XA_SUPERSCRIPT_Y ()       { return 48; },
+    get XA_SUBSCRIPT_X ()         { return 49; },
+    get XA_SUBSCRIPT_Y ()         { return 50; },
+    get XA_UNDERLINE_POSITION ()  { return 51; },
     get XA_UNDERLINE_THICKNESS () { return 52; },
-    get XA_STRIKEOUT_ASCENT () { return 53; },
-    get XA_STRIKEOUT_DESCENT () { return 54; },
-    get XA_ITALIC_ANGLE () { return 55; },
-    get XA_X_HEIGHT () { return 56; },
-    get XA_QUAD_WIDTH () { return 57; },
-    get XA_WEIGHT () { return 58; },
-    get XA_POINT_SIZE () { return 59; },
-    get XA_RESOLUTION () { return 60; },
-    get XA_COPYRIGHT () { return 61; },
-    get XA_NOTICE () { return 62; },
-    get XA_FONT_NAME () { return 63; },
-    get XA_FAMILY_NAME () { return 64; },
-    get XA_FULL_NAME () { return 65; },
-    get XA_CAP_HEIGHT () { return 66; },
-    get XA_WM_CLASS () { return 67; },
-    get XA_WM_TRANSIENT_FOR () { return 68; },
+    get XA_STRIKEOUT_ASCENT ()    { return 53; },
+    get XA_STRIKEOUT_DESCENT ()   { return 54; },
+    get XA_ITALIC_ANGLE ()        { return 55; },
+    get XA_X_HEIGHT ()            { return 56; },
+    get XA_QUAD_WIDTH ()          { return 57; },
+    get XA_WEIGHT ()              { return 58; },
+    get XA_POINT_SIZE ()          { return 59; },
+    get XA_RESOLUTION ()          { return 60; },
+    get XA_COPYRIGHT ()           { return 61; },
+    get XA_NOTICE ()              { return 62; },
+    get XA_FONT_NAME ()           { return 63; },
+    get XA_FAMILY_NAME ()         { return 64; },
+    get XA_FULL_NAME ()           { return 65; },
+    get XA_CAP_HEIGHT ()          { return 66; },
+    get XA_WM_CLASS ()            { return 67; },
+    get XA_WM_TRANSIENT_FOR ()    { return 68; },
 
     /* these aren't really atoms, they're #defines mentioned in EWMH-1.3 */
     get _NET_WM_MOVERESIZE_SIZE_TOPLEFT ()     { return 0; },
