@@ -59,7 +59,7 @@ AC_CACHE_CHECK(if Gecko was compiled to use Thebes, ac_cv_gecko_thebes, [
 	CPPFLAGS="$CPPFLAGS -I${GECKO_INCLUDEDIR}"
 	AC_EGREP_CPP(yes, [
 		#include "mozilla-config.h"
-		#ifdef MOZ_CAIRO_GFX
+		#ifdef MOZ_TREE_CAIRO
 		yes
 		#endif
 	], ac_cv_gecko_thebes=yes, ac_cv_gecko_thebes=no)
@@ -74,8 +74,8 @@ AM_CONDITIONAL(GECKO_USE_THEBES, test "x$ac_cv_gecko_thebes" = "xyes")
 ##
 
 if test "x$ac_cv_gecko_thebes" = "xyes"; then
-   FIREFOX_MINVERSION="3.0a9pre"
-   FIREFOX_MAXVERSION="3.0a9"
+   FIREFOX_MINVERSION="3.0b1"
+   FIREFOX_MAXVERSION="3.0b5"
    FIREFOX_SHORTNAME="minefield"
 else
    FIREFOX_MINVERSION="2.0"
